@@ -1,3 +1,8 @@
+Next release
+
+  - Add ``keys``, ``items``, and ``values`` methods to
+    ``testing.DummyModel``.
+
 0.5.0 (11/18/2008)
 
   - Fix ModelGraphTraverser; don't try to change the ``__name__`` or
